feat: 按学期岗位减免同步G11